kubernetes/apps/selfhosted/immich/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: machine-learning
            app.kubernetes.io/instance: immich
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
